# XTechTLazarus

./: .gitignore  LICENSE  README.md  aegis-swarm-codex-handoff.md  architecture.html  plan.md
plonky2-spike/: Cargo.toml  README.md
plonky2-spike/ns3/: aegis-manet-sidecar.cc
plonky2-spike/scripts/: check-ns3.sh  run-ns3-sidecar.sh
plonky2-spike/src/: main.rs
plonky2-spike/web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
plonky2-spike/web/src/: App.tsx  styles.css
plonky2-spike/web/src/components/: AnalyticsTabs.tsx  BitmapRibbon.tsx  CommandLog.tsx  Dossier.tsx  Fleet3D.tsx  Header.tsx  Manifest.tsx  MetricStrip.tsx  MissionControls.tsx  PanelCorners.tsx  Roster.tsx  Sparkline.tsx  Ticker.tsx
plonky2-spike/web/src/lib/: api.ts  theme.ts  types.ts  util.ts
