[package]
name = "aegis-laptop-verifier"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
ark-bn254 = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["snark"] }
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
plonky2 = "1.1.0"
